kein plan was ich gemacht hab digga

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -31,7 +31,7 @@ exec-once = /home/psulg/scripts/connect_sabaj.sh
 
 $mainMod = SUPER
 $terminal = kitty
-$fileManager = thunar
+$fileManager = dolphin
 $menu = wofi --show drun
 $music = spotify-launcher
 
