new waybar config and other changes

--- a/dotfiles/kitty/kitty.conf
+++ b/dotfiles/kitty/kitty.conf
@@ -6,7 +6,8 @@ bold_italic_font auto
 cursor_shape     beam
 cursor		#8266E1
 cursor_text_color #8266E1
-
+scrollback_lines 10000
+#font_size	35
 
 url_color        #8266E1
 url_style        straight
