added new config files

--- a/dotfiles/hypr/hyprland.conf
+++ b/dotfiles/hypr/hyprland.conf
@@ -19,33 +19,17 @@ monitor = DP-1, prefered, auto, 1
 monitor = DP-2, 1680x1050@60, auto, 1, transform, 1
 monitor = VPN-0, 1980x1020, auto, 1
 
-exec-once = waybar & hyprpaper & firefox
-exec-once = ~/.config/hypr/set_theme
-exec-once = ~/.config/hypr/xdg-portal-hyprland
-exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = /home/psulg/scripts/connect_sabaj.sh
+exec-once = waybar & firefox & hyprpaper
 
-
+env = XCURSOR_SIZE,24
 
 $mainMod = SUPER
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = wofi --show drun
 $music = spotify-launcher
 
-
-
-env = XCURSOR_SIZE,24
-env = QT_QPA_PLATFORMTHEME,qt6ct
-env = XDG_CURRENT_DESKTOP,Hyprland
-env = XDG_SESSION_TYPE,wayland
-env = XDG_SESSION_DESKTOP,Hyprland
-
-
-
-input {
+input{
 	kb_layout = de
     	kb_variant =
    	kb_model =
@@ -71,7 +55,7 @@ general {
     	gaps_out = 10
     	border_size = 3
     	col.active_border = rgba(8266E1FF) rgba(663590EE) 45deg
-    	col.inactive_border = rgba(595959aa)
+    	col.inactive_border = rgba(707880FF) rgba(707880FF) 45deg
 	
 #BEHAVIOR
 #    	cursor_inactive_timeout = 0
@@ -82,7 +66,7 @@ general {
 
 
 decoration {
-	rounding = 10
+	#rounding = 10
     	inactive_opacity = 0.85
 }
 
@@ -171,7 +155,7 @@ bind = $mainMod, M, exec, $music
 bind = $mainMod, L, exec, hyprlock ##~/.config/hypr/start_hyprlock.sh
 bind = SUPER_SHIFT, C, exec, hyprpicker -a
 bind = SUPER_SHIFT, S, exec, grim -g "$(slurp)" "$HOME/Pictures/Screenshots/$(date).png" && wl-copy <"$HOME/Pictures/Screenshots/$(date).png"
-
+bind = $mainMod, S, exec, ssh -L 5433:localhost:5432 kajoloib@bootes.uberspace.de
 
 bindl=,switch:Lid Switch, exec, hyprlock ##~/.config/hypr/start_hyprlock.sh
 
